try to get the Logtext from Session onto the LoggerText Textfield

--- a/RietRob.Desktop.UI/Views/MainView.xaml
+++ b/RietRob.Desktop.UI/Views/MainView.xaml
@@ -40,7 +40,7 @@
         <!-- Row II -->
 
         <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" 
-                 Background="Black" Foreground="Green"
+                 Background="Black" Foreground="Green" FontSize="24"
                  Text="{Binding LoggerText}" IsReadOnly="True"/> 
         
         <!-- Row III -->
